# stuff

./: .gitignore
autogen/: pyproject.toml  test.py
autogen/coding/: qwe.py  stock_ytd_gain.py  ytd_gain.py
ease/: .env.example  README.md  parse_prompts.py  pyproject.toml  test.ipynb
ease/prompts/: prompts.md
qr/: app.py  pyproject.toml
qr/templates/: index.html  result.html
selenium/: Dockerfile  docker-compose.yml  script.py
