[tool.poetry]
name = "ease"
version = "0.1.0"
description = ""
authors = ["Rafał Łazicki <rafal.lazicki99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain = {version = ">=0.0.296", extras = ["llms"]}
openai = "^0.28.0"
ipykernel = "^6.25.2"
tiktoken = "^0.5.1"
chromadb = "^0.4.12"
gitpython = "^3.1.36"
sentence-transformers = "^2.2.2"
pydantic = "1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
