[tool.poetry]
name = "qr"
version = "0.1.0"
description = ""
authors = ["Rafał Łazicki <rafal.lazicki99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pip = "^23.2.1"
qrcode = { extras = ["pil"], version = "^7.4.2" }
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
